Page MenuHome GnuPG

Kleopatra: Canceling encrypt operation in the notepad causes a bogus error message
Closed, ResolvedPublic

Description

Open notepad, enter some text, deselect "Sign As" and "Encrypt for me" and select "Encrypt with password". Then click "Encrypt Notepad" and cancel the password dialog.

Result:

When canceling a sign and or sign&encrypt operation the outcome is less wrong, but reporting the cancellation makes little sense and usually isn't done.

Event Timeline

ikloecker triaged this task as Normal priority.Sep 9 2022, 8:39 AM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

If any notepad operation is canceled, then there shouldn't be any error messages or result widgets (the frame with the Close button in the screen shots) anymore.

ikloecker changed the task status from Open to Testing.Sep 9 2022, 2:37 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
werner removed a project: Restricted Project.Sep 22 2022, 10:41 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works