Properly report a canceled sign and/or encrypt operation

Previously, nothing (for sign) or success (for encrypt) was reported
if the user canceled the operations.

GnuPG-bug-id: 6196